--- a/templates/user_center_site.html
+++ b/templates/user_center_site.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  {% load static %}
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>天天生鲜-用户中心</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/bootstrap-maizi.css" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap-maizi.css' %}" />
   </head>
   <body class="body-top">
     <!-- header -->
@@ -63,9 +64,9 @@
           <div class="col-md-2">
             <article id="sub-nav">
               <div class="list-group list-group-top">
-                <a href="#" class="list-group-item">个人信息</a>
-                <a href="#" class="list-group-item">全部订单</a>
-                <a href="#" class="list-group-item active">收货地址</a>
+                <a href="{% url 'user:info' %}" class="list-group-item">个人信息</a>
+                <a href="{% url 'user:order' 1 %}" class="list-group-item">全部订单</a>
+                <a href="{% url 'user:address' %}" class="list-group-item active">收货地址</a>
               </div>
             </article>
           </div>
@@ -149,8 +150,8 @@
         </p>
       </div>
     </footer>
-    <script src="js/holder.js"></script>
-    <script src="js/jquery-2.2.4.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="{% static 'js/holder.js' %}"></script>
+    <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
 </html>
