--- a/templates/user_center_order.html
+++ b/templates/user_center_order.html
@@ -48,8 +48,13 @@
               <button type="submit" class="btn btn-default">Submit</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">登录</a></li>
-              <li><a href="#">注册</a></li>
+              {% if user.is_authenticated %}
+                  <li><a href="#">欢迎您：{{ user.username }}</a></li>
+              {% else %}
+                  <li><a href="#">登录</a></li>
+                  <li><a href="#">注册</a></li>
+              {% endif %}
+
             </ul>
           </div>
           <!-- /.navbar-collapse -->
